# avlex

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  ruff.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
avlex/: __init__.py  cli.py  clip.py  config.py  pipeline.py  result.py  sampling.py  tasks.py  types.py
avlex/bridges/: __init__.py  attention.py  base.py  projector.py  qformer.py  quantize.py  registry.py  resampler.py  token_bridge.py
avlex/encoders/: __init__.py  audio.py  base.py  registry.py  visual.py
avlex/fusion/: __init__.py  base.py  strategies.py  temporal.py
avlex/llm/: __init__.py  base.py  openai_client.py  registry.py  template_llm.py
avlex/prompts/: __init__.py  library.py  render.py  template.py
avlex/utils/: __init__.py  arrays.py  logging.py  seeding.py
docs/: api-reference.md  architecture.md  design-notes.md  usage.md
examples/01_quickstart_caption/: README.md  run.py
examples/02_token_bridge_offline/: README.md  run.py
examples/03_video_qa/: README.md  run.py
examples/04_custom_bridge/: README.md  run.py
tests/: conftest.py  test_arrays.py  test_attention.py  test_bridges_projector.py  test_bridges_qformer.py  test_bridges_resampler.py  test_bridges_token.py  test_cli.py  test_clip.py  test_config.py  test_encoders_audio.py  test_encoders_visual.py  test_fusion.py  test_llm_template.py  test_pipeline.py  test_prompts.py  test_quantize.py  test_registry.py  test_sampling.py  test_version.py
